--- a/renovate-config.json
+++ b/renovate-config.json
@@ -1,4 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>neu-ro-it/.github"]
+  "extends": ["github>neu-ro-it/.github"]
 }
